--- a/index.html
+++ b/index.html
@@ -323,34 +323,34 @@
 <!-- Team Members Section -->
 <section id="team-members">
     <h2>Team Members</h2>
-<br>
-    <div class="team-member">
-        <button class="button" onclick="toggleInfo('Ria')">01fe23bcs060.Ria Javalagi</button>
-        <section id="Ria-info" style="display:none;">
-            <h2>Reff 1</h2> 
-        </section>
-    </div>
-<br>
-    <div class="team-member">
-        <button class="button" onclick="toggleInfo('Sanjana')">01fe23bcs057.Sanjana Shetti</button>
-        <section id="Sanjana-info" style="display:none;">
-            <h2>Reff 2</h2>
-        </section>
-    </div>
-<br>
-    <div class="team-member">
-        <button class="button" onclick="toggleInfo('Chinmayi')">01fe23bcs080.Chinmayi K.B</button>
-        <section id="Chinmayi-info" style="display:none;">
-            <h2>Reff 3</h2>
-        </section>
-    </div>
-<br>
-    <div class="team-member">
-        <button class="button" onclick="toggleInfo('Ananya')">01fe23bcs055.Ananya Pattanashetty</button>
-        <section id="Ananya-info" style="display:none;">
-            <h2>Reff 4</h2>
-        </section>
-    </div>
+ <table>
+    <tr>
+      <th>ROLL.NO</th>
+      <th>USN</th>
+      <th>NAME</th>
+    </tr>
+    <tr>
+      <td>408</td>
+      <td>01fe23bcs060</td>
+      <td>Ria Javalagi</td>
+    </tr>
+    <tr>
+      <td>407</td>
+      <td>01fe23bcs057</td>
+      <td>Sanjana Shetty</td>
+    </tr>
+    <tr>
+      <td>412</td>
+      <td>01fe23bcs080</td>
+      <td>Chinmayi K.B</td>
+    </tr>
+    <tr>
+      <td>406</td>
+      <td>01fe23bcs055</td>
+      <td>Ananya Pattanashetty</td>
+    </tr>
+  </table>
+    </section>
 
     </section>
     <!-- Hidden content -->
