--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[City Name] - Student Portfolio</title>
+    <title>VAYUJIVA RIA's - Student Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script>
         // Function to toggle the visibility of additional sections
