--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         </li>
     </ol>
     </section>
-        <button class="button" onclick="toggleInfo('ann-reflections')">Ananya's REFLECTIONS</button><br>
+     <br>   <button class="button" onclick="toggleInfo('ann-reflections')">Ananya's REFLECTIONS</button><br>
 
     <section id="ann-reflections" style="display: none;">
    <h2>Course Reflections</h2>
@@ -616,6 +616,16 @@
             <p>
                 Techniques include backtracking, sorting algorithms, brute force, string search algorithms, and shortest path algorithms like Dijkstra's and Floyd's.
             </p>
+        </li>
+    </ol>
+    </section>
+          <br>   <button class="button" onclick="toggleInfo('San-reflections')">Sanjana's REFLECTIONS</button><br>
+
+    <section id="san-reflections" style="display: none;">
+   <h2>Course Reflections</h2>
+   <ol>
+        <li>
+         JAI SHREE RAM !!
         </li>
     </ol>
     </section>
