--- a/index.html
+++ b/index.html
@@ -261,8 +261,45 @@
 <input type="checkbox" id="AnanyaB" class="toggle-section" hidden>
 <section class="info-section">
     <h2>INDUSTRIAL STRATEGIES Of Ananya B P</h2>
-    
+
+    <h3><strong>Real-Time Traffic Monitoring</strong></h3>
+    <p>
+        <strong>SDG 9: Industry, Innovation, and Infrastructure</strong><br>
+        <ul>
+            <li><strong>9.1.1:</strong> Proportion of the rural population who live within 2 km of an all-season road.</li>
+            <li><strong>9.1.2:</strong> Passenger and freight volumes, by mode of transport.</li>
+            <li><strong>9.3.1:</strong> Proportion of small-scale industries in total industry value added.</li>
+            <li><strong>9.3.2:</strong> Proportion of small-scale industries with a loan or line of credit.</li>
+            <li><strong>9.c.1:</strong> Proportion of population covered by a mobile network, by technology.</li>
+        </ul>
+        
+        <strong>SDG 11: Sustainable Cities and Communities</strong><br>
+        <ul>
+            <li><strong>11.2.1:</strong> Proportion of population that has convenient access to public transport.</li>
+            <li><strong>11.3.1:</strong> Ratio of land consumption rate to population growth rate.</li>
+            <li><strong>11.3.2:</strong> Proportion of cities with a direct participation structure of civil society in urban planning.</li>
+            <li><strong>11.4.1:</strong> Total expenditure per capita spent on the preservation, protection, and conservation of cultural and natural heritage.</li>
+        </ul>
+    </p>
+
+    <h3><strong>EV Charging Station Management</strong></h3>
+    <p>
+        <strong>SDG 7: Affordable and Clean Energy</strong><br>
+        <ul>
+            <li><strong>7.1.1:</strong> Proportion of population with access to electricity.</li>
+            <li><strong>7.2.1:</strong> Renewable energy share in the total final energy consumption.</li>
+            <li><strong>7.3.1:</strong> Energy intensity measured in terms of primary energy and GDP.</li>
+            <li><strong>7.a.1:</strong> International financial flows to developing countries in support of clean energy research, development, and renewable energy production.</li>
+            <li><strong>7.b.1:</strong> Installed renewable energy-generating capacity in developing countries.</li>
+        </ul>
+
+        <strong>SDG 11: Sustainable Cities and Communities</strong><br>
+        <ul>
+            <li><strong>11.2.1:</strong> Proportion of population that has convenient access to public transport.</li>
+        </ul>
+    </p>
 </section>
+
 
 <input type="checkbox" id="Ria" class="toggle-section" hidden>
 <section class="info-section">
