--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <!-- City Map Section -->
 <section id="city-map">
     <h2>City Map</h2>
-    <p>[Brief description of the city layout or purpose of the map].</p>
+    <p>VAYUJIVA where dreams meet Reality.</p>
      <div style="margin-bottom: 1.5rem;">
         <img src="https://i.ibb.co/dk6507m/VAYU-JIVA.jpg" alt="Image Placeholder" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
     </div>
