--- a/index.html
+++ b/index.html
@@ -661,11 +661,102 @@
 
     <section id="san-reflections" style="display: none;">
    <h2>Course Reflections</h2>
-   <ol>
-        <li>
-         JAI SHREE RAM !!
-        </li>
-    </ol>
+ 
+    <h1>Problems in Nature</h1>
+    <p>
+        <b>Iteration:</b> Compound Interest keeps adding interest over time. Traffic Lights switch between red, yellow, and green.<br>
+        <b>Recursion:</b> Directory Size adds up folder sizes, including subfolders. Fractals repeat patterns in smaller versions.<br>
+        <b>Backtracking:</b> Sudoku fills in numbers and fixes mistakes. Maze tries a path and goes back if stuck.<br>
+        <b>Divide and Conquer:</b> Merging Records breaks data into pieces and puts it together. Sorting (Merge Sort) splits, sorts, and combines data.<br>
+        <b>Greedy Algorithm:</b> ATM Withdrawal takes the biggest bills first. Activity Scheduling chooses the task that ends quickest.<br>
+        <b>Dynamic Programming:</b> Route Planning solves parts of a route to find the best one. Fibonacci remembers results to avoid redundant work.<br>
+        <b>Graph Algorithms:</b> Dijkstra (Shortest Path) finds the quickest route. Prim's/Kruskal's (MST) connects with the least cost.<br>
+        <b>Sorting Algorithms:</b> Task Sorting organizes tasks for efficiency. Ticket Sorting arranges tickets by price.<br>
+        <b>Searching Algorithms:</b> Linear Search finds a file. Binary Search locates a word in a sorted list.
+    </p>
+
+    <h1>Space and Time Efficiency</h1>
+    <p>
+        <b>Space Efficiency:</b> Extra memory an algorithm uses.<br>
+        <b>Time Efficiency:</b> Speed at which an algorithm completes its task.<br>
+        <b>Orders of Growth:</b><br>
+        <b>Order:</b> <b>Time:</b> <b>Space:</b><br>
+        <b>O(1):</b> Array access. Single variable.<br>
+        <b>O(log n):</b> Binary search. Recursive stack.<br>
+        <b>O(n):</b> Loop through a list. Storing list.<br>
+        <b>O(n log n):</b> Merge Sort. Auxiliary space.<br>
+        <b>O(n²):</b> Bubble Sort. 2D matrix.<br>
+        <b>O(2^n):</b> Brute force. Storing subsets.<br>
+        <b>O(n!):</b> Generating permutations. Storing permutations.<br>
+        <b>Complexity Order:</b> Time: O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(2^n) < O(n!).<br>
+        Space: O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(2^n) < O(n!).<br>
+        <b>Why It Matters:</b> Optimized performance, efficient memory use, scalability, real-world impact, and smooth operation on limited devices.
+    </p>
+
+    <h1>Design Principles</h1>
+    <p>
+        <b>Shortest Path Trees:</b> Fundamental technique to find the most efficient routes. Applications: GPS routing.<br>
+        <b>Partitioning:</b> Breaks down problems into smaller parts. Reduces complexity. Example: Quick Sort.<br>
+        <b>Balancing and Rotations:</b> Maintains performance of data structures. Examples: AVL and Red-Black Trees.<br>
+        <b>Edge Relaxation:</b> Dynamically updates path solutions. Example: Dijkstra's algorithm.<br>
+        <b>Level Order Traversal:</b> Systematic, layer-by-layer exploration. Important for tree navigation.<br>
+        <b>Pruning:</b> Eliminates unnecessary solution paths to save time.<br>
+        <b>Brave and Cautious Travel Strategies:</b> Depth-First Search (DFS) for aggressive exploration, Breadth-First Search (BFS) for methodical investigation.
+    </p>
+
+    <h1>Hierarchical Data Structures</h1>
+    <p>
+        <b>Tree:</b> Represents hierarchies like file systems.<br>
+        <b>Binary Search Tree (BST):</b> Efficient sorted data storage.<br>
+        <b>AVL Tree:</b> Maintains balance for consistent performance.<br>
+        <b>2-3 Tree:</b> Ensures perfect balance with logarithmic time.<br>
+        <b>Red-Black Tree:</b> Approximate balancing with fewer rotations.<br>
+        <b>Heap:</b> Priority management with quick min/max access.<br>
+        <b>Trie:</b> Efficient string and prefix searches.
+    </p>
+
+    <h1>Array Query Algorithms</h1>
+    <p>
+        <b>Why Needed:</b> Efficient data access, optimized operations, dynamic applications, and memory efficiency.<br>
+        <b>Applications:</b> Range queries, dynamic updates, prefix queries, static queries, searches, and pattern matching.<br>
+        <b>Core Principles:</b> Divide and Conquer, preprocessing, caching, space-time tradeoff, and incremental updates.
+    </p>
+
+    <h1>Trees and Graphs</h1>
+    <p>
+        <b>Tree:</b> A hierarchical structure.<br>
+        <b>Graph:</b> A collection of nodes connected by edges.<br>
+        <b>Tree Traversals:</b> Pre-order, In-order, Post-order, and Level-order.<br>
+        <b>Graph Traversals:</b> DFS and BFS.<br>
+        <b>Applications:</b> File systems, social networks, routing, web crawling, and recommendation systems.
+    </p>
+
+    <h1>Sorting and Searching Algorithms</h1>
+    <p>
+        <b>Sorting Algorithms:</b> Bubble Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort.<br>
+        <b>Searching Algorithms:</b> Linear Search, Binary Search, and Hashing.<br>
+        <b>Applications:</b> Databases, e-commerce, operating systems, web search engines, and navigation.
+    </p>
+
+    <h1>Graph Algorithms: Spanning Trees and Shortest Paths</h1>
+    <p>
+        <b>Spanning Trees:</b> Connects all nodes with the fewest edges. Applications: Network design and circuit design.<br>
+        <b>Shortest Path Algorithms:</b> Dijkstra's, Bellman-Ford, and A* Algorithm. Applications: GPS, telecommunication, and logistics.
+    </p>
+
+    <h1>Algorithm Design Techniques</h1>
+    <p>
+        <b>Brave and Cautious Travel:</b> Combines DFS and BFS.<br>
+        <b>Pruning:</b> Eliminates unnecessary parts of solution space.<br>
+        <b>Lazy Propagation:</b> Delays updates until necessary.<br>
+        <b>Level Order Traversal:</b> Visits tree nodes level by level.<br>
+        <b>Edge Relaxation:</b> Updates shortest paths dynamically.<br>
+        <b>Balancing and Rotations:</b> Keeps structures balanced.<br>
+        <b>Partitioning:</b> Divides problems into smaller parts.<br>
+        <b>Shortest Path Trees:</b> Represents shortest paths efficiently.
+    </p>
+
+
     </section>
     </section>
     
