--- a/index.html
+++ b/index.html
@@ -659,10 +659,10 @@
     </section>
           <br>   <button class="button" onclick="toggleInfo('San-reflections')">Sanjana's REFLECTIONS</button><br>
 
-    <section id="san-reflections" style="display: none;">
+    <section id="ann-reflections" style="display: none;">
    <h2>Course Reflections</h2>
-  <ol>
-    <h1>Problems in Nature</h1>
+   <ol>
+        <h1>Problems in Nature</h1>
     <p>
         <b>Iteration:</b> Compound Interest keeps adding interest over time. Traffic Lights switch between red, yellow, and green.<br>
         <b>Recursion:</b> Directory Size adds up folder sizes, including subfolders. Fractals repeat patterns in smaller versions.<br>
@@ -755,8 +755,7 @@
         <b>Partitioning:</b> Divides problems into smaller parts.<br>
         <b>Shortest Path Trees:</b> Represents shortest paths efficiently.
     </p>
-        </ol>
-
+    </ol>
     </section>
     </section>
     
