--- a/index.html
+++ b/index.html
@@ -657,96 +657,104 @@
         </li>
     </ol>
     </section>
- <br>   <button class="button" onclick="toggleInfo('ann-reflections')">Ananya's REFLECTIONS</button><br>
+ <br>   <button class="button" onclick="toggleInfo('san-reflections')">Sanjana's REFLECTIONS</button><br>
 
-    <section id="ann-reflections" style="display: none;">
+    <section id="san-reflections" style="display: none;">
    <h2>Course Reflections</h2>
    <ol>
-        <li>
-            <b>1. What are the kinds of problems we see in nature? (iteration, recursion, backtracking)?</b>
-            <p>
-                Nature provides numerous examples that parallel the concepts of iteration, recursion, and backtracking in computational terms. 
-                The recurring cycle of seasons, which progresses and repeats predictably each year, is a clear representation of iteration. 
-                Similarly, the growth pattern of cabbage leaves, where each layer forms upon the previous one in a structured sequence, embodies recursion—a process building upon itself. 
-                Ants foraging for food illustrate backtracking; they traverse paths in search of resources and, upon encountering obstacles or dead ends, retrace their steps to explore alternative routes. 
-                These examples showcase how fundamental algorithmic principles are intricately mirrored in natural processes, emphasizing the profound connection between computational logic and the patterns observed in the natural world.
-            </p>
-        </li>
-        <li>
-            <b>2. What is space and time efficiency? Why are they important? Explain the different classes of problems and orders of growth?</b>
-            <p>
-                <b>Space Complexity:</b> Additional memory an algorithm requires during execution. <br>
-                <b>Time Complexity:</b> The duration it takes for an algorithm to complete its task.
-            </p>
-            <p>
-                These measures are crucial for assessing an algorithm's efficiency, enabling programmers to determine its suitability for specific applications. 
-                The orders of growth of an algorithm describe how time or space requirements grow as the input size increases:
-            </p>
-            <ul>
-                <li>O(1) → Constant order of growth</li>
-                <li>O(n) → Linear order of growth</li>
-                <li>O(log n) → Logarithmic order of growth</li>
-            </ul>
-        </li>
-        <li>
-            <b>3. Take away from different design principles from Chapter 2?</b>
-            <p>
-                Studying different algorithms has helped me grasp their key principles and applications more clearly. For example, AVL trees and Red-Black trees taught me how maintaining balance in data structures is essential for efficient operations. 
-                Exploring graph traversal methods like DFS and BFS showed how different strategies can solve problems effectively—DFS being more exploratory and BFS taking a systematic approach. 
-                Learning sorting algorithms like Merge Sort, which divides and merges data, and Quick Sort, which strategically swaps elements, gave me a better understanding of how they work in practice. 
-                These concepts have provided me with a solid foundation in understanding algorithms and their practical uses.
-            </p>
-        </li>
-        <li>
-            <b>4. The hierarchical data and how different tree data structures solve and optimize over problem scenarios (tree, BST, AVL, 2-3, Red-Black, heap, trie)?</b>
-            <p>
-                Similar to the previous reflections, hierarchical data structures like AVL trees and Red-Black trees focus on maintaining balance for efficient operations. 
-                These structures optimize scenarios like database indexing, network routing, and problem-solving in programming challenges.
-            </p>
-        </li>
-        <li>
-            <b>5. The need for array query algorithms and their implications. Their applications and principles need to be discussed.</b>
-            <p>
-                Efficient array queries are crucial for managing large datasets with frequent updates. Lookup tables precompute and store results for fast range queries, while segment trees handle dynamic updates efficiently. 
-                A simpler alternative is the Binary Indexed Tree (BIT), which uses a clever bitwise approach for quick range operations. These tools have practical uses, like enabling price filters on shopping sites such as Amazon, where customers can search within specific price ranges. Similarly, financial platforms use range queries to analyze stock trends over chosen periods.
-            </p>
-        </li>
-        <li>
-            <b>6. Differentiate between tree and graphs and their traversals. The applications of each.</b>
-            <p>
-                <b>Trees:</b> A connected, acyclic graph with n nodes and n-1 edges. Always has a root node. Is always connected and has no cycles. <br>
-                <b>Graphs:</b> A collection of vertices connected by edges, which can be cyclic or disconnected.
-            </p>
-            <p>
-                <b>Tree Traversals:</b> Pre-order, In-order, Post-order. Examples: Heaps, Binary Search Trees (BST) for efficient search, insertion, and deletion. <br>
-                <b>Graph Traversals:</b> DFS (Depth-First Search), BFS (Breadth-First Search). Examples: Road navigation, social networks, communication networks.
-            </p>
-        </li>
-        <li>
-            <b>7. Deliberate on sorting and searching algorithms, the technique behind each and how they connect to the real world.</b>
-            <p>
-                Sorting algorithms arrange data in order (ascending/descending). Examples include:
-            </p>
-            <ul>
-                <li><b>Bubble Sort:</b> Repeatedly compares and swaps adjacent elements.</li>
-                <li><b>Insertion Sort:</b> Inserts elements into the sorted portion one by one.</li>
-                <li><b>Selection Sort:</b> Finds the smallest/largest element and places it in the sorted section.</li>
-                <li><b>Merge Sort:</b> Recursively splits and merges sorted halves.</li>
-                <li><b>Quick Sort:</b> Partitions the array around a pivot for sorting.</li>
-            </ul>
-        </li>
-        <li>
-            <b>8. Discuss the importance of graph algorithms with respect to spanning trees and shortest paths.</b>
-            <p>
-                Graph algorithms like Kruskal’s and Prim’s help minimize traversal costs. Shortest path algorithms like Dijkstra and Floyd-Warshall are vital for navigation, network routing, and optimization tasks.
-            </p>
-        </li>
-        <li>
-            <b>9. Discuss the different studied algorithm design techniques.</b>
-            <p>
-                Techniques include backtracking, sorting algorithms, brute force, string search algorithms, and shortest path algorithms like Dijkstra's and Floyd's.
-            </p>
-        </li>
+       <h1>Problems in Nature</h1>
+    <p>
+        <b>Iteration:</b> Compound Interest keeps adding interest over time. Traffic Lights switch between red, yellow, and green.<br>
+        <b>Recursion:</b> Directory Size adds up folder sizes, including subfolders. Fractals repeat patterns in smaller versions.<br>
+        <b>Backtracking:</b> Sudoku fills in numbers and fixes mistakes. Maze tries a path and goes back if stuck.<br>
+        <b>Divide and Conquer:</b> Merging Records breaks data into pieces and puts it together. Sorting (Merge Sort) splits, sorts, and combines data.<br>
+        <b>Greedy Algorithm:</b> ATM Withdrawal takes the biggest bills first. Activity Scheduling chooses the task that ends quickest.<br>
+        <b>Dynamic Programming:</b> Route Planning solves parts of a route to find the best one. Fibonacci remembers results to avoid redundant work.<br>
+        <b>Graph Algorithms:</b> Dijkstra (Shortest Path) finds the quickest route. Prim's/Kruskal's (MST) connects with the least cost.<br>
+        <b>Sorting Algorithms:</b> Task Sorting organizes tasks for efficiency. Ticket Sorting arranges tickets by price.<br>
+        <b>Searching Algorithms:</b> Linear Search finds a file. Binary Search locates a word in a sorted list.
+    </p>
+
+    <h1>Space and Time Efficiency</h1>
+    <p>
+        <b>Space Efficiency:</b> Extra memory an algorithm uses.<br>
+        <b>Time Efficiency:</b> Speed at which an algorithm completes its task.<br>
+        <b>Orders of Growth:</b><br>
+        <b>Order:</b> <b>Time:</b> <b>Space:</b><br>
+        <b>O(1):</b> Array access. Single variable.<br>
+        <b>O(log n):</b> Binary search. Recursive stack.<br>
+        <b>O(n):</b> Loop through a list. Storing list.<br>
+        <b>O(n log n):</b> Merge Sort. Auxiliary space.<br>
+        <b>O(n²):</b> Bubble Sort. 2D matrix.<br>
+        <b>O(2^n):</b> Brute force. Storing subsets.<br>
+        <b>O(n!):</b> Generating permutations. Storing permutations.<br>
+        <b>Complexity Order:</b> Time: O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(2^n) < O(n!).<br>
+        Space: O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(2^n) < O(n!).<br>
+        <b>Why It Matters:</b> Optimized performance, efficient memory use, scalability, real-world impact, and smooth operation on limited devices.
+    </p>
+
+    <h1>Design Principles</h1>
+    <p>
+        <b>Shortest Path Trees:</b> Fundamental technique to find the most efficient routes. Applications: GPS routing.<br>
+        <b>Partitioning:</b> Breaks down problems into smaller parts. Reduces complexity. Example: Quick Sort.<br>
+        <b>Balancing and Rotations:</b> Maintains performance of data structures. Examples: AVL and Red-Black Trees.<br>
+        <b>Edge Relaxation:</b> Dynamically updates path solutions. Example: Dijkstra's algorithm.<br>
+        <b>Level Order Traversal:</b> Systematic, layer-by-layer exploration. Important for tree navigation.<br>
+        <b>Pruning:</b> Eliminates unnecessary solution paths to save time.<br>
+        <b>Brave and Cautious Travel Strategies:</b> Depth-First Search (DFS) for aggressive exploration, Breadth-First Search (BFS) for methodical investigation.
+    </p>
+
+    <h1>Hierarchical Data Structures</h1>
+    <p>
+        <b>Tree:</b> Represents hierarchies like file systems.<br>
+        <b>Binary Search Tree (BST):</b> Efficient sorted data storage.<br>
+        <b>AVL Tree:</b> Maintains balance for consistent performance.<br>
+        <b>2-3 Tree:</b> Ensures perfect balance with logarithmic time.<br>
+        <b>Red-Black Tree:</b> Approximate balancing with fewer rotations.<br>
+        <b>Heap:</b> Priority management with quick min/max access.<br>
+        <b>Trie:</b> Efficient string and prefix searches.
+    </p>
+
+    <h1>Array Query Algorithms</h1>
+    <p>
+        <b>Why Needed:</b> Efficient data access, optimized operations, dynamic applications, and memory efficiency.<br>
+        <b>Applications:</b> Range queries, dynamic updates, prefix queries, static queries, searches, and pattern matching.<br>
+        <b>Core Principles:</b> Divide and Conquer, preprocessing, caching, space-time tradeoff, and incremental updates.
+    </p>
+
+    <h1>Trees and Graphs</h1>
+    <p>
+        <b>Tree:</b> A hierarchical structure.<br>
+        <b>Graph:</b> A collection of nodes connected by edges.<br>
+        <b>Tree Traversals:</b> Pre-order, In-order, Post-order, and Level-order.<br>
+        <b>Graph Traversals:</b> DFS and BFS.<br>
+        <b>Applications:</b> File systems, social networks, routing, web crawling, and recommendation systems.
+    </p>
+
+    <h1>Sorting and Searching Algorithms</h1>
+    <p>
+        <b>Sorting Algorithms:</b> Bubble Sort, Insertion Sort, Merge Sort, Quick Sort, and Heap Sort.<br>
+        <b>Searching Algorithms:</b> Linear Search, Binary Search, and Hashing.<br>
+        <b>Applications:</b> Databases, e-commerce, operating systems, web search engines, and navigation.
+    </p>
+
+    <h1>Graph Algorithms: Spanning Trees and Shortest Paths</h1>
+    <p>
+        <b>Spanning Trees:</b> Connects all nodes with the fewest edges. Applications: Network design and circuit design.<br>
+        <b>Shortest Path Algorithms:</b> Dijkstra's, Bellman-Ford, and A* Algorithm. Applications: GPS, telecommunication, and logistics.
+    </p>
+
+    <h1>Algorithm Design Techniques</h1>
+    <p>
+        <b>Brave and Cautious Travel:</b> Combines DFS and BFS.<br>
+        <b>Pruning:</b> Eliminates unnecessary parts of solution space.<br>
+        <b>Lazy Propagation:</b> Delays updates until necessary.<br>
+        <b>Level Order Traversal:</b> Visits tree nodes level by level.<br>
+        <b>Edge Relaxation:</b> Updates shortest paths dynamically.<br>
+        <b>Balancing and Rotations:</b> Keeps structures balanced.<br>
+        <b>Partitioning:</b> Divides problems into smaller parts.<br>
+        <b>Shortest Path Trees:</b> Represents shortest paths efficiently.
+    </p>
     </ol>
     </section>
     </section>
