--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
     <p>Your gateway to knowledge, innovation, and well-being.</p>
 </header>
 
-<!-- Buttons to show more info -->
-<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
-<button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+<nav>
+    <button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
+    <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+</nav>
+
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
-    <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.</p>
+    <p>The Design and Analysis of Algorithms course helped us learn how to solve problems in smart and efficient ways. It focuses on designing algorithms for different problems and ensuring they are both correct and fast. Starting with basic ideas and advancing to complex concepts, the course enhances our ability to create efficient solutions.</p>
     
     <h3>Data Structures and Algorithms Studied So Far:</h3>
     <ul>
-        <li><strong>Binary Search Trees:</strong> Used to organize and quickly search through data arranged in a hierarchy.</li>
-        <li><strong>AVL Trees:</strong> A more balanced version of BSTs, making search faster.</li>
-        <li><strong>Red-Black Trees:</strong> A self-balancing binary search tree that guarantees logarithmic height and fast operations.</li>
-        <li><strong>2-3 Trees:</strong> A self-balancing search tree used to store and retrieve data efficiently.</li>
+        <li><strong>Binary Search Trees:</strong> Used to organize and quickly search through hierarchical data.</li>
+        <li><strong>AVL Trees:</strong> A balanced version of BSTs, ensuring faster search operations.</li>
+        <li><strong>Red-Black Trees:</strong> A self-balancing binary search tree ensuring logarithmic height.</li>
+        <li><strong>2-3 Trees:</strong> A self-balancing search tree used to efficiently store and retrieve data.</li>
     </ul>
 </section>
 
@@ -57,58 +59,57 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Predicting optimal tourist routes</td>
-                <td>Identify and optimize travel routes for tourists based on real-time data and preference</td>
+                <td>Predicting Optimal Tourist Routes</td>
+                <td>Identify and optimize travel routes for tourists based on real-time data and preferences.</td>
                 <td>ABC</td>
                 <td>Graphs</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Sorting Menu Items</td>
-                <td>Sort menu items by price or popularity</td>
+                <td>Sort menu items by price or popularity.</td>
                 <td>WXY</td>
-                <td>Quick sort, Array</td>
+                <td>Quick Sort, Array</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Monitoring traffic flow</td>
-                <td>Analyze traffic density at intersections</td>
+                <td>Monitoring Traffic Flow</td>
+                <td>Analyze traffic density at intersections.</td>
                 <td>DEF</td>
                 <td>Graphs, BFS, DFS</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Optimizing Waste Management routes</td>
-                <td>Generate efficient waste collection routes to minimize fuel and time</td>
+                <td>Optimizing Waste Management Routes</td>
+                <td>Generate efficient waste collection routes to minimize fuel and time.</td>
                 <td>ABC</td>
                 <td>Dijkstra's Algorithm</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Monitoring water usage in residential areas</td>
-                <td>Track and analyze water consumption patterns across neighborhoods</td>
+                <td>Monitoring Water Usage in Residential Areas</td>
+                <td>Track and analyze water consumption patterns across neighborhoods.</td>
                 <td>JKL</td>
-                <td>Time series analysis</td>
+                <td>Time Series Analysis</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Optimizing city-wide internet connectivity</td>
-                <td>Ensure high-speed connectivity by mapping and optimizing Wi-Fi hotspots</td>
+                <td>Optimizing City-Wide Internet Connectivity</td>
+                <td>Ensure high-speed connectivity by mapping and optimizing Wi-Fi hotspots.</td>
                 <td>XYA</td>
-                <td>Minimum spanning tree</td>
+                <td>Minimum Spanning Tree</td>
             </tr>
         </tbody>
     </table>
 </section>
 
 <!-- More Info Section -->
-
-   <section id="More Information">
+<section id="more-info">
     <h2>About KWIN City</h2>
-    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
+    <p>KWIN City is designed for a brighter tomorrow. Every step here leads to opportunities, learning, and innovation. The city emphasizes eco-friendly, people-centric designs while fostering collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
     
     <h3>Strategic Location</h3>
-    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and business ventures. Moreover, KWIN City is well-connected via major highways and rail routes, ensuring seamless transportation and connectivity to other parts of the region and beyond.</p>
+    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and businesses. Additionally, the city is well-connected via major highways and rail routes.</p>
 </section>
 
 <!-- City Map Section -->
@@ -116,12 +117,12 @@
     <h2>City Map</h2>
     <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
     <div style="margin-bottom: 1.5rem;">
-        <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="Image Placeholder" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+        <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="City Map" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
     </div>
 </section>
 
 <!-- Team Members Section -->
-<section>
+<section id="team">
     <h2>Team Members</h2>
     <ul>
         <li>Vishal U Hosur</li>
