--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 </header>
 
 <nav>
-    <button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
-    <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+   c
 </nav>
 
 <!-- Course Introduction Section -->
@@ -124,12 +123,10 @@
 <!-- Team Members Section -->
 <section id="team">
     <h2>Team Members</h2>
-    <ul>
-        <li>Vishal U Hosur</li>
-        <li>Varun S Terdal</li>
-        <li>Suleman A</li>
-        <li>Saif Ali</li>
-    </ul>
+        <button class="button" onclick="toggleInfo('vis-intro')">Vishal S H </button>
+    <button class="button" onclick="toggleInfo('var-ideas')">Varun S T</button>
+       <button class="button" onclick="toggleInfo('sul-intro')">Suleman A</button>
+    <button class="button" onclick="toggleInfo('saif-ideas')">Saif Ali</button>
 </section>
 
 <footer>
