--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </header>
 
 <nav>
-   c
+      <button class="button" onclick="toggleInfo('course-intro')"> Course Introduction </button>
+    <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
 </nav>
 
 <!-- Course Introduction Section -->
